Dodanie do wykluczeń folderu prace naukowe.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ log/**
 Zapis modelu/**
 wyniki/**
 temp/**
+Prace naukowe/**
 !Zapis modelu/VGG16_Cifar10_moje_wagi_86%.hdf5
 Zapis modelu-uciete/**
 __pycache__/**
